--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,14 +11,14 @@
     }
 
     .header {
-      height: 100px;
+      height: 15vh;
       background-image: url(img/fb_adjust.jpg);
       background-size: cover;
       background-position: center center;
     }
 
     .pic {
-      height: 50px;
+      height: 10vh;
     }
 
     hr.style-one {
@@ -66,7 +66,10 @@
   <header class="header d-flex justify-content-center align-items-end">
     <img src="img/header.png" class="pic"></div>
   </header>
-  <div id="app"></div>
+
+  <div id="app">
+
+  </div>
   <script src="popup.js"></script>
 </body>
 
