[Feature] Modified popup.html

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,14 +11,14 @@
     }
 
     .header {
-      height: 15vh;
+      height: 100px;
       background-image: url(img/fb_adjust.jpg);
       background-size: cover;
       background-position: center center;
     }
 
     .pic {
-      height: 10vh;
+      height: 50px;
     }
 
     hr.style-one {
